# aish

./: .cursorrules  .gitignore  README.md  pyproject.toml
aish/: __init__.py  cli.py  core.py  utils.py
experiments/: aish_finetuning.ipynb  aish_inference_and_eval.ipynb  completions.jsonl  error_analysis.md  eval.py  finetuning.ipynb  generate_completions.ipynb
experiments/llama/: completions.jsonl  eval_results.txt
experiments/llama-3-8b-4bit-finetuned/: results.txt
experiments/qwen/: completions.jsonl  eval_results.txt
tests/: conftest.py  test_cli.py  test_core.py
