[project]
name = "aish"
version = "0.1.0"
description = "A CLI tool that converts natural language instructions into bash commands"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ollama>=0.1.6",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
aish = "aish.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["aish"] 